--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 color-eyre = "0.6.2"
-object = { version = "0.29.0", default-features = false, features = ["elf", "read_core", "write_std"] }
+object = { version = "0.29.0", default-features = false, features = ["elf"] }
 region = "3.0.0"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
