--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bytemuck = { version = "1.12.0", features = ["derive"] }
 color-eyre = "0.6.2"
 futures = { version = "0.3.21", features = ["executor"] }
 object = { version = "0.29.0", default-features = false, features = ["elf"] }
