--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ bytemuck = { version = "1.12.0", features = ["derive"] }
 color-eyre = "0.6.2"
 futures = { version = "0.3.21", features = ["executor"] }
 object = { version = "0.29.0", default-features = false, features = ["elf"] }
+
+[features]
+default = ["object/read"]
+
+[[bin]]
+name = "symbol-data"
+required-features = ["object/read"]
